- TW-1615 Japanese translation for Taskwarrior(150513) (thanks to ribbon).
- TW-1616 Intermittent lengthy delay when starting or completing a task (thanks
          to Jeremy John Reeder).
- TW-1617 Can't search for multi-word project (thanks to Audrey Easterday).
- TW-1619 fish completion contain backspaces in fish master version (thanks to
          Johannes Wienke₎.
- TW-1621 Recurrent parent tasks shouldn't be counted in history (thanks to
          Denis Kasak).
- TW-1622 Duration UDA can't take an algebraic expression (thanks to Jeremy John
          Reeder).
- TW-1624 Report filters combine incorrectly with command line with terminator.
- TW-1626 Wrong wait date (thanks to Andrea Rizzi).
- TW-1627 'mon' is replaced with date in project field (thanks to James Cline).
- TW-1629 Descriptions often get overwritten with "( or )" (thanks to Jeremy
          John Reeder).
- TW-1630 "Due" parsing behavior seems inconsistent (thanks to Jim B).
- TW-1632 Japanese translation for Taskwarrior(150713) (thanks to ribbon).
- TW-1634 due.not:<date> excludes only tasks scheduled at mitnight (thanks to
          Tomas Babej).
- TW-1635 Running "task anystringatall" does not filter anything (thanks to
          Tomas Babej).
- TW-1636 UUID with numeric-only first segment is not parsed properly (thanks
          to Tomas Babej).
- TW-1637 project name "mod" interpreted as date (thanks to Wim Schuermann).
- TW-1638 Undo doesn't work when a context is set (thanks to Jeremy John Reeder).
- TW-1640 '_get <id>.start' for an inactive tasks returns a date formatted from
          epoch 0.
- TW-1641 'edit' should process or reject <mods> arguments (thanks to Daniel
          Shahaf).
- TW-1642 After "--", an apostrophe unexpectedly ends the task description
          (thanks to Jeremy John Reeder).
- TW-1643 Batch modifying tasks under context sets description to '( )'
          (thanks to Leon Feng).
- TW-1647 descriptions that are stringified ids (thanks to Daniel Shahaf).