@@ -98,6 +98,7 @@
 - TW-1617 Can't search for multi-word project (thanks to Audrey Easterday).
 - TW-1619 fish completion contain backspaces in fish master version (thanks to
           Johannes Wienke₎.
+- TW-1620 Dateformat wrongly interpreted (thanks to Dirk Deimeke).
 - TW-1621 Recurrent parent tasks shouldn't be counted in history (thanks to
           Denis Kasak).
 - TW-1622 Duration UDA can't take an algebraic expression (thanks to Jeremy John
